feat: api get status teacher
